autotests/syntax-tests/tests/negative/negative141.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var $LABEL Name Name ) Name , : = : = ; = ; }
Name : { } : , : = : = ; = ; } ; 